<resources>
    <string name="app_name">AnimeThemes App</string>

    <string name="search_hint">Search</string>
    <string name="list_hint">Username</string>
    <string name="select_platform">Select platform</string>
    <string name="myanimelist">MyAnimeList</string>
    <string name="anilist">AniList</string>
    <string name="view">view</string>
    <string name="views">views</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="unknown">Unknown</string>
    <string name="trans">Transition</string>
    <string name="over">Voice Over</string>
    <string name="lyrics">Lyrics</string>
    <string name="uncen">Uncensored</string>
    <string name="subbed">Subbed</string>
    <string name="no_credits">No Credits</string>
    <string name="bluray">BluRay</string>
    <string name="deleted">deleted</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download_theme">Download theme</string>
    <string name="year">Year</string>
    <string name="bookmarked">bookmarked</string>
    <string name="top_15">Top themes</string>
    <string name="latest_anime">Latest anime added</string>
    <string name="latest_themes">Latest themes added</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="unbookmarked">unbookmarked</string>
    <string name="add_all_to_playlist">Add all to playlist</string>
    <string name="empty_list">Playlist is empty</string>
    <string name="artist">Artist</string>
    <string name="added_to">added to playlist</string>
    <string name="more">See more</string>
    <string name="browse">Browse</string>
    <string name="anime">Anime</string>
    <string name="themes">Themes</string>
    <string name="artists">Artists</string>
    <string name="server_error">There was an error getting the data\nPlease restart the app</string>
    <string name="no_connection">Not connected to internet</string>
    <string name="def">Default</string>
    <string name="mirror_quality">Select mirror</string>
    <string name="desc_fullscreen_button">Fullscreen button</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_description">Enable/Disable dark mode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_completed">Download completed</string>
    <string name="latest_artist">Latest artists added</string>
    <string name="current_season">%1$s (current season)</string>
    <string name="download_type">Select format</string>
    <string name="download_video">Video with audio</string>
    <string name="download_audio">Audio only</string>
    <string name="settings_layout_design_label">Switch item layout design</string>
    <string name="settings_layout_design_desc">Choose whichever design you want for the main items to be displayed.</string>
    <string name="dismiss_update">Dismiss</string>
</resources>