<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="0dp"
        app:cardBackgroundColor="@color/dialog"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/download_type"
                android:textColor="@color/dialogText"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@id/separator">

                <TextView
                    android:id="@+id/video_option"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:text="@string/download_video" />

                <View
                    android:id="@+id/verticalSeparator"
                    style="@style/divider"
                    android:layout_weight="0"
                    android:layout_width="@dimen/separator_size"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/audio_option"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:text="@string/download_audio" />
            </LinearLayout>

            <View
                android:id="@+id/separator"
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_size"
                android:layout_marginTop="45dp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>