<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="0dp"
        app:cardBackgroundColor="@color/dialog"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/select_platform"
                android:textColor="@color/dialogText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/horizontalSeparator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:id="@+id/horizontalSeparator"
                style="@style/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_size"
                android:layout_marginTop="45dp"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/extraRow"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontalSeparator">

                <TextView
                    android:id="@+id/myAnimeList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:text="@string/myanimelist"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/verticalSeparator"
                    style="@style/divider"
                    android:layout_width="@dimen/separator_size"
                    android:layout_height="45dp" />

                <TextView
                    android:id="@+id/aniList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:text="@string/anilist"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>